# psd_perception

./: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
config/: camera_params.yaml
launch/: cone_detection.launch.py
psd_perception/: README.md  camera_lidar_node.py  camera_node.py
scripts/: install_deps.sh
src/: cone_detection_lidar.cpp  cone_detection_stereocam.cpp  fake_perception.cpp  old_fake_perception.cpp
